minor spacing fixes

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -6,7 +6,7 @@
 
 .gallery-img {
     display: inline-block;
-    width: 24.5%;
+    width: 24%;
 }
 
 .gallery-img a {
